[package]
name = "transaction_service"
version = "0.1.0"
edition = "2024"

[dependencies]
enum_dispatch = "0.3.13"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"]}
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
