[package]
name = "transaction_service"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
csv-async = { version = "1.3.1", features = ["tokio"] }
enum_dispatch = "0.3.13"
rstest = "0.26.1"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"]}
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
